--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/node": "^22.13.5",
+        "@types/styled-components": "^5.1.34",
         "autoprefixer": "^10.4.21",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -50,8 +51,10 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-dropzone": "^14.3.8",
+        "react-organizational-chart": "^2.2.1",
         "react-quilljs": "^2.0.5",
         "react-responsive": "^10.0.1",
+        "styled-components": "^6.1.18",
         "sweetalert2": "^11.22.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
