--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "glob": "^11.0.2",
         "postcss": "^8.5.4",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
