--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "sass-embedded": "^1.89.1",
+        "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.17",
         "typescript-eslint": "^8.23.0"
     },
