--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "lucide-react": "^0.475.0",
         "quill-magic-url": "^4.2.0",
         "quill-resize-image": "^1.0.7",
+        "quill-table-ui": "^1.0.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-dropzone": "^14.3.8",
