--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@laravel/echo-react": "^2.1.5",
         "@types/node": "^22.13.5",
         "@types/styled-components": "^5.1.34",
         "autoprefixer": "^10.4.21",
@@ -20,10 +21,12 @@
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
         "glob": "^11.0.2",
+        "laravel-echo": "^2.1.5",
         "postcss": "^8.5.4",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "pusher-js": "^8.4.0",
         "sass-embedded": "^1.89.1",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.17",
